--- a/pubman/pubman_presentation/src/main/webapp/resources/eSciDoc_CSS_v2/eSciDoc_component_css/infoPage.css
+++ b/pubman/pubman_presentation/src/main/webapp/resources/eSciDoc_CSS_v2/eSciDoc_component_css/infoPage.css
@@ -47,8 +47,11 @@
 	font-size: 100%;
 }
 
-.infoPage .sideSection * {
+.infoPage .sideSection {
 	float: right;
+}
+
+.infoPage .sideSection * {
 	font-size: 117%;
 }
 
