PUBMAN-1290 fixed: EASM, locator description and copyright date is not saved

--- a/pubman/pubman_presentation/src/main/webapp/editItem/LocatorsGroup.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/editItem/LocatorsGroup.jspf
@@ -122,7 +122,7 @@
 					<span class="xHuge_area0 xTiny_marginLExcl endline">
 						<span class="xDouble_area0 tiny_marginRIncl">
 							<h:outputLabel id="txtTitleInputLocatorDescription" styleClass="xDouble_label" value="#{genre.locators_component_description_label}" converter="GenreLabelConverter"/>
-							<h:inputTextarea id="inpLocatorDescription" styleClass="xDouble_txtArea inputTxtArea" value="#{locator.file.description}" cols="15" rows="3" />
+							<h:inputTextarea id="inpLocatorDescription" styleClass="xDouble_txtArea inputTxtArea" value="#{locator.description}" cols="15" rows="3" />
 						</span>
 					</span>
 				</h:panelGroup>
