Bugfix: PUBMAN-1140 - Show full title on mouse over

--- a/pubman/pubman_presentation/src/main/webapp/list/itemList.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/list/itemList.jspf
@@ -154,7 +154,7 @@
  				</span>
  				<span class="seperator status"></span>
  				<span class="free_area0_p6 endline itemHeadline">
- 					<h:outputLink id="lnkList_shortTitle" title="#{tip.list_shortTitle}" value="#{item.link}">
+ 					<h:outputLink id="lnkList_shortTitle" title="#{item.fullTitle}" value="#{item.link}">
  						<b><h:outputText id="lblShortTitle" value="#{item.shortTitle}"/></b>
  					</h:outputLink>
 					
