--- a/pubman/pubman_presentation/src/main/webapp/easySubmission/steps/Step3Import.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/easySubmission/steps/Step3Import.jspf
@@ -141,20 +141,6 @@
 					</b>
 					<span class="xHuge_area0 xTiny_marginLExcl endline fileSection">
 						<tr:inputFile id="inpUploadedBibTexFile" styleClass="fileInput" value="#{EasySubmission.uploadedBibTexFile}" />
-						<%-- 
-						<span class="quad_area0 tiny_marginRIncl">
-							<h:outputLabel id="lblBibtexPath" styleClass="quad_label" value="#{lbl.easy_submission_lblBibtexPath}"/>
-							<span class="xDouble_area0 tiny_marginRIncl">
-								<input id="inpBibtexPath" class="xDouble_txtInput fileLocation" type="text" readonly="readonly"/>
-							</span>
-							<span class="large_area0 large_negMarginRIncl">
-								<span class="large_area0 fileInputPositioner">
-									<tr:inputFile id="inpUploadedBibTexFile" styleClass="fileInput" value="#{EasySubmission.uploadedBibTexFile}" onchange="$(this).parents('.fileSection').find('.fileLocation').val($(this).val()); if($(this).val()!=''){$(this).parents('.fileSection').find('.fileUploadBtn').removeAttr('disabled');} else {$(this).parents('.fileSection').find('.fileUploadBtn').attr('disabled','disabled');};" />
-								</span>
-							</span>
-							<h:outputLabel id="lblChooseFile" styleClass="large_label endline fileLabel groupBtn" value="#{lbl.EditItem_btChooseFile}" />
-						</span>
-						 --%>
 					</span>
 					<span class="xHuge_area0 xTiny_marginLExcl endline">
 					</span>
@@ -162,7 +148,7 @@
 						<h:outputText value="#{lbl.easy_submission_lblReference}" /><span class="noDisplay">: </span>
 					</b>
 					<span class="xHuge_area0 xTiny_marginLExcl endline">
-						<h:selectOneRadio id="selSelectReference"  styleClass="xLarge_radioBtn tiny_marginRIncl xHuge_area0" value="REFERENCE" binding="#{EasySubmissionSessionBean.radioSelectReference}">										
+						<h:selectOneRadio id="selSelectReference" styleClass="xLarge_radioBtn tiny_marginRIncl xHuge_area0" value="LOCATOR" binding="#{EasySubmissionSessionBean.radioSelectReference}">										
 							<f:selectItems id="selReferenceOptions" value="#{EasySubmissionSessionBean.REFERENCE_OPTIONS}"/>
 						</h:selectOneRadio>
 					</span>
