--- a/pubman/pubman_presentation/src/main/webapp/resources/eSciDoc_CSS_v2/eSciDoc_component_css/lists.css
+++ b/pubman/pubman_presentation/src/main/webapp/resources/eSciDoc_CSS_v2/eSciDoc_component_css/lists.css
@@ -240,11 +240,11 @@
 .listItem .itemHeader {
 	margin-bottom: -0.37em;
 }
-
+/*
 .loggedIn .listItem .itemHeader {
 	margin-bottom: -3.19em;
 }
-
+*/
 .listItem .shortView, .listItem .mediumView {
 	margin-bottom: 0.5em;
 }
