Improvement: PUBMAN-1194 - Advanced Search - search for various "degree types"

--- a/pubman/pubman_presentation/src/main/webapp/resources/eSciDoc_CSS_v2/eSciDoc_component_css/fullItem.css
+++ b/pubman/pubman_presentation/src/main/webapp/resources/eSciDoc_CSS_v2/eSciDoc_component_css/fullItem.css
@@ -304,7 +304,7 @@
 	height: 4em;
 }
 
-.fullItem .checkboxDoubleGroup {
+.fullItem .checkboxDoubleGroup .checkboxDoubleGroup2 {
 	width: 27.65em;
 }
 
