--- a/pubman/pubman_presentation/src/main/webapp/resources/eSciDoc_CSS_v2/themes/skin_highContrast/styles/appearance.css
+++ b/pubman/pubman_presentation/src/main/webapp/resources/eSciDoc_CSS_v2/themes/skin_highContrast/styles/appearance.css
@@ -433,7 +433,7 @@ FORM BG			#F2F8FC
 	
 	/*FULL ITEM BLOCK*/
 	
-	.fullItem .metaDataSection, .fullItem .detailedItem {
+	.fullItem .metaDataSection, .fullItem .detailedItem, .fullItem .fullsizedBlock {
 		border-color: #AEAEAE !important;
 		border-style: solid;
 	}
