--- a/pubman/pubman_presentation/src/main/webapp/resources/eSciDoc_CSS_v2/eSciDoc_component_css/fullItem.css
+++ b/pubman/pubman_presentation/src/main/webapp/resources/eSciDoc_CSS_v2/eSciDoc_component_css/fullItem.css
@@ -308,7 +308,7 @@
 	height: 4em;
 }
 
-.fullItem .checkboxDoubleGroup, .fullItem .checkboxDoubleGroup .checkboxDoubleGroup2 {
+.fullItem .checkboxDoubleGroup {
 	width: 27.65em;
 }
 
