--- a/pubman/pubman_presentation/src/main/webapp/home/BlogIntegration.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/home/BlogIntegration.jspf
@@ -54,7 +54,7 @@
 	<div id="feedControl" style="font-size: 0.4em"></div>
 </h:panelGroup>
  
-<h:panelGroup >
+<h:panelGroup rendered="#{!ApplicationBean.checkSystemTypeProduction}">
     <h:outputText id="blogDisabled" value="#{lbl.Home_Header_News_Disabled}"/>
 </h:panelGroup>
 
