--- a/pubman/pubman_presentation/src/main/webapp/resources/eSciDoc_CSS_v2/eSciDoc_component_css/fullItem.css
+++ b/pubman/pubman_presentation/src/main/webapp/resources/eSciDoc_CSS_v2/eSciDoc_component_css/fullItem.css
@@ -308,6 +308,10 @@
 	height: 4em;
 }
 
+.fullItem .splitBlockHeader {
+	height: 4.92em;
+}
+
 .fullItem .checkboxDoubleGroup {
 	width: 27.65em;
 }
